--- a/Cyredra/res/values-v21/styles.xml
+++ b/Cyredra/res/values-v21/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 /*
-* Copyright (C) 2015 Cyredra Software
+* Copyright (C) 2015 Redmaner
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
@@ -17,9 +17,10 @@
 */
 -->
 
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-	<string name="cyra_launcher_version">1.150</string>
-	<string name="cyra_launcher_status">charlie</string>
-	<string name="cyra_launcher_date">Wed 04 November 2015 20:04 CET</string>
-	<string name="cyra_launcher_tools">Java 1.7, Gradle 2.7, android gradle plugin 1.3.1, build tools 23.0.1</string>
+<resources>
+    <style name="Theme.Settings" parent="@android:style/Theme.Material">
+        <item name="android:colorPrimary">@color/material_color_primary</item>
+        <item name="android:colorPrimaryDark">@color/material_color_primary_dark</item>
+        <item name="android:colorAccent">@color/material_color_accent</item>
+    </style>
 </resources>
