Cyra settings - part 3
In this commit
- Reworked Cyra settings framework
- Dynamic overview tiles
- Changeable edge and top margin
- Changeable dock icons (still WIP)

--- a/Cyredra/res/values-v21/styles.xml
+++ b/Cyredra/res/values-v21/styles.xml
@@ -18,7 +18,7 @@
 -->
 
 <resources>
-    <style name="Theme.Settings" parent="@android:style/Theme.Material">
+    <style name="Theme.Settings" parent="@android:style/Theme.Material.Light.DarkActionBar">
         <item name="android:colorPrimary">@color/material_color_primary</item>
         <item name="android:colorPrimaryDark">@color/material_color_primary_dark</item>
         <item name="android:colorAccent">@color/material_color_accent</item>
