--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -18,7 +18,10 @@
     <dimen name="app_icon_size">64dp</dimen>
 
 <!-- Dynamic Grid -->
-    <dimen name="dynamic_grid_edge_margin">6dp</dimen>
+    <dimen name="dynamic_grid_margin_normal">6dp</dimen>
+    <dimen name="dynamic_grid_margin_tight">2dp</dimen>
+    <dimen name="dynamic_grid_margin_none">0dp</dimen>
+    <dimen name="dynamic_grid_margin_big">10dp</dimen>
     <dimen name="dynamic_grid_search_bar_max_width">500dp</dimen>
     <dimen name="dynamic_grid_search_bar_height">56dp</dimen>
     <dimen name="dynamic_grid_page_indicator_height">20dp</dimen>
