--- a/Cyredra/res/values/cyra_strings.xml
+++ b/Cyredra/res/values/cyra_strings.xml
@@ -69,7 +69,7 @@
 	<string name="pref_workspace_wallpaper_scroll">Scroll wallpaper</string>
 	<string name="pref_workspace_wallpaper_scroll_summary">Scroll wallpaper when switching screens.</string>
 	<string name="pref_workspace_infinite_scroll">Infinite scrolling</string>
-	<string name="pref_workspace_infinite_scroll_summary">Enables infinte scrolling, also for the appdrawer.</string>
+	<string name="pref_workspace_infinite_scroll_summary">Enables infinte scrolling</string>
     <string name="pref_hotseat_icons">Dock icons</string>
     <string name="pref_hotseat_icons_summary">Current dock icons: %s</string>
 
