--- a/Cyredra/res/values/cyra_strings.xml
+++ b/Cyredra/res/values/cyra_strings.xml
@@ -32,8 +32,8 @@
 	<string name="pref_screen_icons">Icons</string>
 	<string name="pref_screen_gestures">Gestures</string>
     <string name="pref_screen_general">General</string>
-    <string name="pref_screen_animation_custom">Customize animations</string>
-    <string name="pref_screen_build_info">Launcher info</string>
+    <string name="pref_screen_advanced">Advanced</string>
+    <string name="pref_screen_build_info">Cyra Launcher info</string>
 
 	<!-- Preference categories --> 
     <string name="pref_category_workspace_gridsize">Gridsize</string>
@@ -51,9 +51,8 @@
 	<string name="pref_category_icon_presets">Icon presets</string>
 	<string name="pref_category_gestures">Gestures</string>
 	<string name="pref_category_about">About launcher</string>
-	<string name="pref_category_general_animation">Animations</string>
-    <string name="pref_category_animation_workspace">Workspace</string>
-    <string name="pref_category_animation_drawer">App drawer</string>
+	<string name="pref_category_general">General</string>
+    <string name="pref_category_animation_customize">Customize animations</string>
 
     <!-- Preferences workspace -->
     <string name="pref_workspace_rows">Rows</string>
@@ -146,19 +145,11 @@
     <string name="cyra_admin_disable_requested">When disabling devicemanger privileges Cyra launcher is not allowed to lock the screen</string>	
 
 	<!-- Animations -->
-	<string name="anim_activity_start_delay">Activity start delay</string>
-	<string name="anim_activity_animation_delay">Activity animation delay</string>
-	<string name="anim_new_apps_animation_delay">New apps animation delay</string>
-	<string name="anim_new_apps_page_delay">New apps page delay</string>
-	<string name="anim_overview_transition">Overview transition time</string>
-	<string name="anim_workspace_unshrink">Workspace unshrink time</string>
-	<string name="anim_background_fade_out">Background fade out duration</string>
-	<string name="anim_zoom_in_time">Zoom in time</string>
-	<string name="anim_zoom_out_time">Zoom out time</string>
-	<string name="anim_fade_in_time">Fade in time</string>
-	<string name="anim_fade_out_time">Fade out time</string>
-	<string name="anim_reveal_time">Reveal time</string>
-	<string name="anim_conceal_time">Conceal time</string>
+	<string name="anim_overlay_reveal_time">Overlay reveal time</string>
+	<string name="anim_overlay_reveal_time_summary">Overlay reveal time cannot be higher then overlay transition time\nCurrent animation speed: %s</string>
+	<string name="anim_overlay_transition_time">Overlay transition time</string>
+	<string name="anim_allapps_transition_time">App drawer transition time</string>
+	<string name="anim_overview_transition_time">Overview transition time</string>
 
 	<!-- Overview buttons -->
 	<string name="cyra_apps_button_text">Applications</string>
